fix minor css issue with header on mobile

--- a/client/frontend/src/components/header.css
+++ b/client/frontend/src/components/header.css
@@ -28,3 +28,15 @@
   top: calc(50% - 50px);
   position: absolute;
 }
+
+/* bs3: mobile navbar without js custom
+ * ------------------------------------
+ * show the collapse when navbar toggle is checked */
+ #navbar-toggle-cbox:checked ~ .collapse {
+	display: block;
+}
+
+/* the checkbox used only internally; don't display it */
+#navbar-toggle-cbox {
+  display:none
+}
